Link underline bug on wrap fixed.

--- a/src/styles/pe-link.css
+++ b/src/styles/pe-link.css
@@ -3,6 +3,8 @@
 
 	color: inherit;
 	text-decoration: none;
+
+	white-space: nowrap;
 }
 
 .pe-link:after {
